catalog-api.yml güncellendi.
